# Rtype-epitech

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: build.yml
client/: Application.cpp  Application.hpp  AttributeClient.hpp  CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.hpp  Resources.cpp  Resources.hpp  main.cpp
client/Graphics/: CircleShape.cpp  CircleShape.hpp  Font.cpp  Font.hpp  KeyboardKey.cpp  KeyboardKey.hpp  RectangleShape.cpp  RectangleShape.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp
client/RenderSystem/: BorderRenderSystem.cpp  BorderRenderSystem.hpp  KeyboardKeyRenderSystem.cpp  KeyboardKeyRenderSystem.hpp  MusicRenderSystem.cpp  MusicRenderSystem.hpp  PlayerRenderSystem.cpp  PlayerRenderSystem.hpp  SliderRenderSystem.cpp  SliderRenderSystem.hpp  SoundRenderSystem.cpp  SoundRenderSystem.hpp  SpriteRenderSystem.cpp  SpriteRenderSystem.hpp  TextRenderSystem.cpp  TextRenderSystem.hpp
client/Resources/Musics/: Game.txt  Menu.txt
client/Scenes/: AScene.hpp  CreateRoom.cpp  CreateRoom.hpp  Game.cpp  Game.hpp  HowToPlay.cpp  HowToPlay.hpp  Login.cpp  Login.hpp  Menu.cpp  Menu.hpp  Room.cpp  Room.hpp  RoomList.cpp  RoomList.hpp  Settings.cpp  Settings.hpp  Splash.cpp  Splash.hpp
client/Server/: GameHandleReceived.cpp  GameUDP.cpp  GameUDP.hpp  MenuHandleReceived.cpp  MenuUDP.cpp  MenuUDP.hpp  SendFunctions.cpp
client/UpdateSystem/: BackgroundUpdateSystem.cpp  BackgroundUpdateSystem.hpp  HoverUpdateSystem.cpp  HoverUpdateSystem.hpp  InputStringUpdateSystem.cpp  InputStringUpdateSystem.hpp  LoginRequestUpdateSystem.cpp  LoginRequestUpdateSystem.hpp  PlayerUpdateSystem.cpp  PlayerUpdateSystem.hpp  ProjectileUpdateSystem.cpp  ProjectileUpdateSystem.hpp  SaveActionUpdateSystem.cpp  SaveActionUpdateSystem.hpp  ServerRequestUpdateSystem.cpp  ServerRequestUpdateSystem.hpp  SwitchSceneUpdateSystem.cpp  SwitchSceneUpdateSystem.hpp
docs/: ECS.md  Protocol.md  RFC_Protocol.md  ScriptMob.md
server/: AttributeServer.hpp  Bestiaire.txt  CMakeLists.txt  Enemies.cpp  Game.cpp  Game.hpp  GameHandleReceived.cpp  HandleReceived.cpp  Room.cpp  Room.hpp  ServerUDP.cpp  ServerUDP.hpp  UpdateEnemy.cpp  UpdateEnemy.hpp  UpdatePlayers.cpp  UpdatePlayers.hpp  Users.cpp  Users.hpp  main.cpp
server/entity/: player.txt
shared/: Bestiaire.cpp  Bestiaire.hpp  CMakeLists.txt  Exception.cpp  Exception.hpp  LockedQueue.hpp  Packet.cpp  Packet.hpp  Scripte.txt  UUID.cpp  UUID.hpp  Utils.cpp  Utils.hpp
shared/ECS/: Attribute.hpp  AttributeArray.hpp  AttributeManager.hpp  Coordinator.cpp  Coordinator.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  IAttributeArray.hpp  Signature.hpp  System.hpp  SystemManager.hpp
